--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body{
   font-family: 'Signika Negative', sans-serif;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   background-color: #F2D388;
 }
 #root {
