--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,9 @@ h1, h2, h3{
                           'info'
                           'button'
                           ;
-    grid-template-columns: 1fr;                      
+    grid-template-columns: 1fr;
+    gap: 10px;
+    
   }
   
 
